change the email confirmation wording

--- a/dental/website/templates/contact.html
+++ b/dental/website/templates/contact.html
@@ -158,7 +158,7 @@
   </div>
   <!-- ***** Breadcrumb Area End ***** -->
   {% if message_name %}
-     <center><H3>Thanks got email {{ message_name }} !!</H3></center>
+     <center><H3> Nice Thanks got email {{ message_name }} !!</H3></center>
   {% endif %}
 
   <!-- ***** Contact Area Start ***** -->
